# SEC-MCP

./: .dockerignore  .env.example  .gitignore  .vercelignore  API_IMPLEMENTATION_SUMMARY.md  API_QUICK_REFERENCE.md  CLAUDE.md  Dockerfile  FILES_CREATED.txt  IMPLEMENTATION_CHECKLIST.md  MCP_AUDIT.md  README.md  TOOLS.md  UPGRADE_PLAN.md  new-frontend-prototype.html  new-frontend-prototype.jsx  pyproject.toml  railway.toml  vercel.json
scripts/: audit_tools.py  build_golden_values.py  cli_test.py  fetch_all_us_logos.py  fetch_forex_logos.py  regression_compare.py  upload_logos_to_storage.py
src/sec_mcp/: __init__.py  batch_cache.py  batch_quarterly.py  chat_app.py  classify.py  company_aliases.json  config.py  db.py  disk_cache.py  edgar_client.py  financials.py  fmp_client.py  historical.py  ingest_all.py  ingest_indices.py  insider_tracker.py  intent_parser.py  logging_config.py  models.py  narrator.py  perplexity_client.py  polygon_client.py  screener.py  sec_client.py  section_segmenter.py  server.py  server_legacy.py  supabase_cache.py  xbrl_mappings.py
src/sec_mcp/api/: __init__.py  app.py
src/sec_mcp/api/routes/: __init__.py  chat.py  companies.py  compare.py  export.py  filings.py  financials.py  metrics.py  screener.py
src/sec_mcp/core/: README.md  __init__.py  cache.py  cache_keys.py  etf.py  filing_diff.py  fx.py  market_data.py  peer_engine.py  ratios.py  realtime_price.py  screener.py  ticker_metrics.py  ttm.py
src/sec_mcp/data/: highlights.json  marketcap.json
src/sec_mcp/facts/: __init__.py  ingest.py  periods.py
src/sec_mcp/graph/: __init__.py  canonical.py  filing_parser.py  resolver.py  segments.py  store.py
src/sec_mcp/nlp/: chunker.py  claude_fallback.py  ner.py  sentiment.py  summarizer.py
src/sec_mcp/static/: app.css  app.js  docs.html  explorer.html  index.html
src/sec_mcp/static/logos/: logos_manifest.json
src/sec_mcp/surface/: __init__.py  company_search.py  filings.py  fundamentals.py  indices.py  meta.py  ownership.py  quotes.py  screen.py  session.py
supabase/migrations/: 20260609000000_concept_graph_schema.sql
tests/: conftest.py  test_classify.py  test_config.py  test_debt_and_crosscheck.py  test_edgar_client.py  test_etf.py  test_intent_parser.py  test_nlp.py  test_quarter_decumulation.py  test_ratios.py  test_surface.py  test_ticker_metrics.py  test_tools.py  test_ttm.py  test_xbrl_mappings.py
tests/golden/: golden_values.json  regression_snapshot.json  test_golden_tickers.py
